# Lattice

./: .gitignore  CMakeLists.txt  README.md  gradle.properties  prompt.md  review.md
.github/workflows/: build-native.yml
native/: CMakeLists.txt  CMakeLists_anvil_core.txt  CMakeLists_anvil_test.txt  CMakeLists_cache_io.txt  CMakeLists_jni.txt  CMakeLists_simple.txt  CMakeLists_simple_core.txt  CMakeLists_simple_test.txt  CMakeLists_standalone.txt  README.md  standalone_anvil_test.cpp
native/ai/: adaptive_decision_engine.cpp  adaptive_decision_engine.hpp
native/core/: CMakeLists.txt
native/core/io/: CMakeLists.txt  anvil_format.cpp  anvil_format.hpp  async_chunk_io.cpp  async_chunk_io.hpp  async_chunk_io_darwin.cpp  async_chunk_io_fallback.cpp  async_chunk_io_linux.cpp  async_chunk_io_windows.cpp  io_types.hpp
native/core/net/: async_compressor.cpp  async_compressor.hpp  compress_buffer_cache.cpp  compress_buffer_cache.hpp  entity_tracker.cpp  entity_tracker.hpp  hierarchical_tracker.cpp  hierarchical_tracker.hpp  memory_arena.cpp  memory_arena.hpp  native_compressor.cpp  native_compressor.cpp.txt  native_compressor.hpp  native_compressor.hpp.txt
native/core/redstone/: CMakeLists.txt  Makefile_simple  REDSTONE_ENGINE_FIX_REPORT.md  paper_compatible_redstone_engine.cpp  paper_compatible_redstone_engine.hpp  redstone_components.hpp  redstone_engine.cpp  redstone_engine.hpp  redstone_engine_complete.cpp  redstone_optimizer.cpp  redstone_optimizer.hpp  redstone_optimizer_simple.hpp  simple_redstone_engine.cpp  simple_redstone_engine.hpp  test_redstone_engine.cpp  test_simple_redstone  test_simple_redstone.cpp
native/core/world/: advanced_light_engine.cpp  advanced_light_engine.hpp  light_updater.cpp  light_updater.hpp  pathfinder.cpp  pathfinder.hpp
native/entity/: ai_bridge.cpp  ai_test.cpp  behavior_nodes.cpp  behavior_nodes.hpp  biological_ai.cpp  biological_ai.hpp  fmt_wrapper.hpp
native/jni/: CMakeLists.txt  ChunkIOBridge.cpp  ChunkIOBridge.h  FinalLatticeJNI_Fixed.h  RedstoneJNI_Impl_REAL_FIXED.cpp  entity_bridge.cpp  hierarchical_entity_bridge.cpp  jni_helper.hpp  native_interface.cpp  safe_memory_manager.hpp
native/jni/ai/: adaptive_decision_engine_jni.cpp
native/jni/entity/: biological_ai_optimized_jni.cpp  biological_ai_optimized_jni.hpp
native/jni/io/: CMakeLists.txt  anvil_chunk_io_jni.cpp  anvil_chunk_io_jni.hpp  async_chunk_io_optimized_jni.cpp  async_chunk_io_optimized_jni.hpp  native_chunk_io_jni.cpp  native_chunk_io_jni.hpp  native_chunk_io_optimized_jni.cpp  nbt_serializer_optimized_jni.cpp  nbt_serializer_optimized_jni.hpp
native/jni/net/: async_compression_jni.cpp  async_compression_jni.hpp  async_compressor_optimized_jni.cpp  async_compressor_optimized_jni.hpp  entity_tracker_optimized_jni.cpp  entity_tracker_optimized_jni.hpp  memory_arena_optimized_jni.cpp  memory_arena_optimized_jni.hpp  native_compression.cpp  native_compression.hpp
native/jni/redstone/: paper_compatible_redstone_jni.cpp  paper_compatible_redstone_jni.hpp  redstone_engine_jni.cpp  redstone_engine_jni.hpp  redstone_engine_optimized_jni.cpp  redstone_optimizer_jni.cpp  redstone_optimizer_jni.hpp
native/jni/world/: advanced_light_engine_jni.cpp  advanced_light_engine_jni.hpp  async_chunk_io_jni.cpp  light_engine_optimized_jni.cpp  light_engine_optimized_jni.hpp  light_updater_jni.cpp  light_updater_jni.hpp  pathfinder_jni.cpp  pathfinder_jni.hpp  pathfinder_optimized_jni.cpp  pathfinder_optimized_jni.hpp
native/jni_support/: jni_bridge.hpp
native/optimization/: CMakeLists.txt  lattice_optimization.hpp  simd_optimization.hpp  test_optimization.cpp  universal_optimizer.hpp
native/world/: async_chunk_io.cpp  async_chunk_io.hpp
paper-server/: build.gradle.kts
paper-server/native/: CMakeLists.txt  README.md  build_deps.bat  setup_mingw.bat
paper-server/native/core/: CMakeLists.txt  threadpool.hpp
paper-server/native/core/net/: native_compressor.cpp  native_compressor.hpp
paper-server/native/jni/: CMakeLists.txt  jni_helper.hpp  native_interface.cpp
paper-server/native/jni/net/: native_compression.cpp
paper-server/patches/features/: 0099-Add-native-compression-support.patch  0100-Integrate-Lattice-optimizations.patch  0101-Optimize-redstone-system-with-caching.patch  0102-Optimize-pathfinding-AI-for-different-mob-types.patch
paper-server/patches/sources/net/minecraft/network/: Connection.java.patch
paper-server/patches/sources/net/minecraft/world/level/chunk/storage/: ChunkSerializer.java.patch
paper-server/patches/sources/net/minecraft/world/level/lighting/: LevelLightEngine.java.patch
paper-server/src/main/java/io/lattice/: LatticeServer.java
paper-server/src/main/java/io/lattice/chunk/: ChunkStorageManager.java  NativeChunkCompressor.java  OptimizedChunkSerializer.java
paper-server/src/main/java/io/lattice/config/: LatticeConfig.java
paper-server/src/main/java/io/lattice/nativeutil/: LatticeNativeInitializer.java  NativeLibraryManager.java
paper-server/src/main/java/io/lattice/network/: AsyncCompressionCallback.java  AsyncCompressionManager.java  Connection.java  DynamicCompression.java  NativeCompression.java  OptimizedPacketCompressor.java
paper-server/src/main/java/io/lattice/network/compression/: NativeCompressionDecoder.java  NativeCompressionEncoder.java  NativeCompressionManager.java
paper-server/src/main/java/io/lattice/redstone/: NativeRedstoneOptimizer.java  RedstoneOptimizationManager.java  RedstonePerformanceMonitor.java
paper-server/src/main/java/io/lattice/world/: LightOptimizedWorld.java  MobPathfindingParams.java  NativeLightUpdater.java  NativePathfinder.java  PathNode.java
paper-server/src/main/java/io/lattice/world/chunk/storage/: ChunkSerializer.java
paper-server/src/main/java/io/lattice/world/level/lighting/: LevelLightEngine.java
paper-server/src/main/java/io/papermc/paper/configuration/: PaperConfigurations.java
paper-server/src/main/java/net/minecraft/world/entity/: Mob.java
src/main/java/io/lattice/performance/: NativeInterface.java
(+1 files in other folders)
